# VietnamProvinces

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.rst  README.vi_VN.rst  justfile  pyproject.toml  tox.ini
.github/workflows/: test.yml
data/: nested-divisions.json
dev/: __main__.py  _conversion_table_template.py  _dict_ward_template.py  _enum_code_template.py  _enum_district_template.py  _enum_province_template.py  _enum_ward_template.py  _enums_template.py  _enums_ward_template.py  _legacy_enum_template.py  _legacy_lookup_template.py  _lookup_template.py  _province_conversion_table_template.py  amend.py  conversion_table.py  divisions.py  dmhc_sample.py  legacy_divisions.py  phones.py  scraping.py  types.py
dev/seed-data/: Xa_2021-02-03.csv
dev/seed-data/2025-07/: BangChuyendoiĐVHCmoi_cu_khong_merge.csv  Cap-tinh.csv  Cap-xa.csv  source.txt
dev/seed-data/Pre-2025-07/: Xa_2025-01-04.csv
docs/: conf.py  index.rst
docs/api-ref/: classes.rst  codes.rst  index.rst  legacy.rst
docs/api-ref/legacy/: base.rst  enums.rst  index.rst
tests/: test_models.py  test_search.py  test_vietnamese_provinces.py
vietnam_provinces/: __init__.py  _bridges.py  _enum_tpl.py  _lookup.py  _province_conversion_2025.py  _ward_conversion_2025.py  base.py  codes.py  compat.py  helpers.py  lookup.py  samples.py
vietnam_provinces/data/: flat-divisions.json  nested-divisions.json
vietnam_provinces/enums/: __init__.py  districts.py  provinces.py  wards.py
vietnam_provinces/legacy/: __init__.py  _lookup.py  base.py  codes.py  lookup.py
vietnam_provinces/seed-data/: Ma_vung_dien_thoai_co_dinh_mat_dat_2017-09-01.csv  Xa_2020-02-25.csv
vietnam_provinces/tools/: __main__.py  divisions.py  phones.py  types.py
